# gopro-cli

./: Cargo.toml  api.yaml  openapi.sh  readme.md
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: CameraStateResponse.md  CameraStateResponseStatus.md  DateTimeResponse.md  DefaultApi.md  MediaDirectory.md  MediaItem.md  MediaResponse.md
openapi/src/apis/: configuration.rs  default_api.rs
openapi/src/models/: camera_state_response.rs  camera_state_response_status.rs  date_time_response.rs  media_directory.rs  media_item.rs  media_response.rs  mod.rs
src/: bluetooth.rs  main.rs
