[package]
name = "gopro-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.15"
futures-util = "0.3.14"

btleplug = "0.10.5"
uuid = "1.3.1"


openapi = {path = "openapi"}
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
